--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
             </section>
         </div>
-        <div class="container-popup-task">
+        <div class="container-popup-task hidden">
             <h3 id="popup-task-name"></h3>
             <input type="text" id="popup-input-description">
             <input type="" id="popup-input-color">
