--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                         <h3 class="task-name"></h3>
                         <span class="modify-icon"></span>
                     </div>
+                    <!-- pop up de modification -->
                     <div class="container-modificationOfaTask hidden">
-                        <span class="modification-icone"></span>
+                        
                     </div>
                     <div class="container-add-icone">
                         <span id="add-icone"></span>
