add import of fonts in css

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <label for="popup-input-font">Police</label>
                 <select name="font" id="popup-input-font">
                     <option value="arial">Arial</option>
-                    <option value="helvetica">Helvetica</option>
+                    <option value="helvetica">Garamond</option>
                     <option value="lato">Lato</option>
                 </select>
                 <button type="submit" id="button-submit">Valider</button>
