fix: bug modify task

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="container-add-icone">
-            <span id="add-icone">+</span>
+            <span id="add-task-icone">+</span>
         </div>
     </main>
     <footer>
