--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class="container-task-body">
                             <p class="description-task">Description de la carte</p>
                         </div>
-                        <!-- pop up de modification -->
+                        <!-- pop up de modification et suppression-->
                         <div class="container-add-icone">
                             <span id="add-icone"></span>
                             <button id="modify-task-button">Modifier</button>
@@ -55,6 +55,7 @@
                 </section>
             </div>
         </div>
+        <!-- Popup d'ajout de tâche-->
         <div class="container-popup-task hidden">
             <div class="container-form">
                 <span id="close-popup-add-task">X</span>
@@ -79,9 +80,34 @@
                 <button type="submit" id="button-submit">Valider</button>
             </div>
         </div>
-        <div class="container-add-icone">
-            <span id="add-icone">+</span>
+        <!-- Pop up de modification de tâche --> 
+        <div class="container-popup-modified hidden">
+            <div class="container-form-modified">
+                <span id="close-popup-modified">X</span>
+                <h2>Modifier la tâche</h2>
+                <label for="popup-task-name">Nom de la tâche</label>
+                <input type="text" id="popup-task-name">
+        
+                <label for="popup-input-description">Description</label>
+                <input type="text" id="popup-input-description">
+                <label for="popup-input-color">Couleur</label>
+                <select name="color" id="popup-input-color">
+                    <option value="blue">Bleu</option>
+                    <option value="green">Vert</option>
+                    <option value="orange">Orange</option>
+                </select>
+                <label for="popup-input-font">Police</label>
+                <select name="font" id="popup-input-font">
+                    <option value="arial">Arial</option>
+                    <option value="helvetica">Garamond</option>
+                    <option value="lato">Lato</option>
+                </select>
+                <button type="submit" id="button-submit">Enregistrer</button>
+            </div>
         </div>
+    <div class="container-add-icone">
+        <span id="add-icone">+</span>
+    </div>
     </main>
     <footer>
         <div class="container-footer">
