--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <option value="green">Vert</option>
                     <option value="orange">Orange</option>
                 </select>
-                <label for="popup-input-font">Police</label>
+                <label for="popup-input-font">Statut</label>
                 <select name="font" id="popup-input-font">
                     <option value="arial">Arial</option>
                     <option value="helvetica">Garamond</option>
