--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                 <span id="close-popup-add-task">X</span>
                 <h2>Ajouter une tâche</h2>
                 <label for="popup-task-name">Nom de la tâche</label>
-                <input type="text" id="popup-task-name">
-
+                <input type="text" id="popup-task-name" required>
                 <label for="popup-input-description">Description</label>
-                <input type="text" id="popup-input-description">
+                <input type="text" id="popup-input-description" required>
                 <label for="popup-input-color">Couleur</label>
                 <select name="color" id="popup-input-color">
                     <option value="blue">Bleu</option>
                     <option value="green">Vert</option>
                     <option value="orange">Orange</option>
                 </select>
+                <p id="error-msg" class="hidden"></p>
                 <button type="submit" id="button-submit">Valider</button>
             </div>
         </div>
