--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                     <option value="green">Vert</option>
                     <option value="orange">Orange</option>
                 </select>
+                <label for="popup-input-priority">Priorité</label>
+                <select name="priority" id="popup-input-priority">
+                    <option value="low">Pas urgent</option>
+                    <option value="medium">Peu urgent</option>
+                    <option value="hight">Urgent</option>
+                </select>
+                <label for="popup-task-category">Catégorie</label>
+                <input type="text" id="popup-task-category">
                 <p id="error-msg" class="hidden"></p>
                 <button type="submit" id="button-submit">Valider</button>
             </div>
