--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <div class="container-main-title">
             <h1>To do list</h1>
         </div>
+        <div class="container-categoryFilter">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 1 1-3 0m3 0a1.5 1.5 0 1 0-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-9.75 0h9.75" />
+            </svg>
+            <p>Filtrer</p>
+        </div>
+        <div class="container-filter-selection">
+            <label for="category-input-filter">Sélectionner les catégories</label>
+            <select name="category" id="category-input-filter">
+                <option value="all">Toutes les catégories</option>
+            </select>
+            <button type="submit" id="filter-submitButton">Valider</button>
+        </div>
     </header>
     <main>
         <div class="container-sections">
@@ -97,11 +110,6 @@
                 <button type="submit" id="button-submit">Enregistrer</button>
             </div>
     </main>
-    <footer>
-        <div class="container-footer">
-            <p>© 2024 - To do list</p>
-        </div>
-    </footer>
 </body>
 
 </html>
