add class hidden

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </svg>
             <p>Filtrer</p>
         </div>
-        <div class="container-filter-selection">
+        <div class="container-filter-selection hidden">
             <label for="category-input-filter">Sélectionner les catégories</label>
             <select name="category" id="category-input-filter">
                 <option value="all">Toutes les catégories</option>
