button modified final

--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
             <div class="container-form-modified">
                 <span id="close-popup-modified">X</span>
                 <h2>Modifier la tâche</h2>
-                <label for="popup-task-name">Nom de la tâche</label>
-                <input type="text" id="popup-task-name">
+                <label for="modified-task-name">Nom de la tâche</label>
+                <input type="text" id="modified-task-name">
         
-                <label for="popup-input-description">Description</label>
-                <input type="text" id="popup-input-description">
-                <label for="popup-input-color">Couleur</label>
-                <select name="color" id="popup-input-color">
+                <label for="modified-input-description">Description</label>
+                <input type="text" id="modified-input-description">
+                <label for="modified-input-color">Couleur</label>
+                <select name="color" id="modified-input-color">
                     <option value="blue">Bleu</option>
                     <option value="green">Vert</option>
                     <option value="orange">Orange</option>
                 </select>
                 <label for="popup-input-state">Statut</label>
                 <select name="state" id="popup-input-state">
-                    <option value="to-do">à faire</option>
-                    <option value="in-progress">en cours</option>
-                    <option value="finish">terminé</option>
+                    <option value="à faire">à faire</option>
+                    <option value="en cours">en cours</option>
+                    <option value="terminé">terminé</option>
                 </select>
-                <button type="submit" id="button-submit">Enregistrer</button>
+                <button type="submit" id="button-submit-modified">Enregistrer</button>
             </div>
     </main>
     <footer>
