--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
                     <option value="en cours">en cours</option>
                     <option value="terminé">terminé</option>
                 </select>
+                <!-- priorités -->
+                <label for="modified-input-priority">Priorité</label>
+                <select name="priority" id="modified-input-priority">
+                    <option value="low">Pas urgent</option>
+                    <option value="medium">Peu urgent</option>
+                    <option value="hight">Urgent</option>
+                </select>
+                <!-- catégories -->
+                <label for="modified-task-category">Catégorie</label>
+                <input type="text" id="modified-task-category">
+                <!-- bouton modifier -->
                 <button type="submit" id="button-submit-modified">Enregistrer</button>
             </div>
     </main>
