fix modified and sort array

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <select name="priority" id="popup-input-priority">
                     <option value="low">Pas urgent</option>
                     <option value="medium">Peu urgent</option>
-                    <option value="hight">Urgent</option>
+                    <option value="high">Urgent</option>
                 </select>
                 <label for="popup-task-category">Catégorie</label>
                 <input type="text" id="popup-task-category">
